--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
         <header>
-            <nav>
+            <nav id = "nav">
                 <a href="#"></a>
                 <a href="#"></a>
                 <a href="#"></a>
